--- a/app/src/main/res/layout/mapfrag.xml
+++ b/app/src/main/res/layout/mapfrag.xml
@@ -10,11 +10,8 @@
         android:layout_height="match_parent"
         android:enabled="true"
         android:clickable="true"
-        android:id="@+id/mapView"
-        tilesource="Mapnik"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/map1"
+        tilesource="Mapnik" />
     <!-- imagine the string hello_world is defined as "Hello Fragment World!" in strings.xml -->
 
 </LinearLayout>
